# agentsync

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  fly.toml  pyproject.toml
docker/: Dockerfile  docker-compose.yml
scripts/: demo_multi_agent.py  deploy.sh  setup.sh
src/agentsync_mcp/: __init__.py  __main__.py  cli.py  server.py
src/agentsync_mcp/db/: database.py  schema.sql
src/agentsync_mcp/models/: __init__.py  agent.py  conflict.py  lock.py  work_item.py
src/agentsync_mcp/services/: auto_coordinator.py  conflict_analyzer.py  event_bus.py  identity.py  lock_manager.py  work_queue.py
src/agentsync_mcp/tools/: conflicts.py  locks.py  work.py
src/agentsync_mcp/utils/: config.py  logger.py
tests/: conftest.py  test_conflict_analyzer.py  test_database.py  test_event_bus.py  test_lock_manager.py  test_work_queue.py
tests/integration/: test_mcp_tools.py
