[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsync-mcp"
version = "0.1.0"
description = "Real-time coordination for AI coding agents via Model Context Protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "AgentSync Team" },
]
keywords = ["mcp", "ai", "agents", "coordination", "locks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "anthropic>=0.39.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
redis = [
    "redis>=5.0.0",
]

[project.scripts]
agentsync-mcp = "agentsync_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsync_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
